Added icons, fixed bugs, revised pages

--- a/src/pages/confirmation/confirmation.scss
+++ b/src/pages/confirmation/confirmation.scss
@@ -41,6 +41,14 @@ page-confirmation {
         #green-check {
             color: #69CA5E;
         }
+
+        // .footerBtn {
+        //     position: fixed;
+        //     // left: 0;
+        //     bottom: 50px;
+        //     // right: 0;
+        //     width: 100%;
+        // }
     }
     #countdown {
         color: red;
