Added margin to Book Button on Reservation Page

--- a/src/pages/reservation/reservation.scss
+++ b/src/pages/reservation/reservation.scss
@@ -14,6 +14,7 @@ page-reservation {
         #btnBookNow {
             width: 80%;
             margin: 16px auto !important;
+            margin-bottom: 30px;
             background-color: #E25C48;
             border-radius: 100px;
         }
